--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,14 +50,15 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Input\WeatherEffectDropdown.cs" />
-     <Compile Include="Assets\Scripts\Model\Tiles\ColourTile.cs" />
+     <Compile Include="Assets\Scripts\Model\World\Position.cs" />
+     <Compile Include="Assets\Scripts\Model\TileFeatures\Biome.cs" />
      <Compile Include="Assets\Scripts\Model\TileFeatures\WeatherEffect.cs" />
      <Compile Include="Assets\Scripts\Model\TileFeatures\TileFeatures.cs" />
-     <Compile Include="Assets\Scripts\Input\Zoom.cs" />
+     <Compile Include="Assets\Scripts\Input\PlayerWorldInput.cs" />
      <Compile Include="Assets\Scripts\Input\PowerButtonScript.cs" />
-     <Compile Include="Assets\Scripts\Model\TileFeatures\Biome.cs" />
-     <Compile Include="Assets\Scripts\Input\SelectTile.cs" />
+     <Compile Include="Assets\Scripts\Model\World\WorldMap.cs" />
+     <Compile Include="Assets\Scripts\Model\Tiles\WorldTile.cs" />
+     <Compile Include="Assets\Scripts\Input\ShapeClimateControl.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
