--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,10 @@
      <Compile Include="Assets\Scripts\Input\TileDetailsComponentControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTileEventArg.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\ChangedWorldTileEventArg.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerSettings.cs" />
+     <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
+     <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
