--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -687,6 +687,9 @@
  <HintPath>/home/jonas/Unity/Hub/Editor/2020.1.0f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/mscorlib.dll</HintPath>
  </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Scripts\Scripts.asmdef" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
