--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -75,12 +75,13 @@
      <Compile Include="Assets\Scripts\Input\Menu\DeityViewPortControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditorControl.cs" />
      <Compile Include="Assets\Scripts\Input\PowerButtonScript.cs" />
-     <Compile Include="Assets\Scripts\Input\ShapeClimateControl.cs" />
+     <Compile Include="Assets\Scripts\Input\PowerControls\ShapeClimateControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\ChangedWorldTileEventArg.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
      <Compile Include="Assets\Scripts\Model\World\WorldMap.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
      <Compile Include="Assets\Scripts\Model\Tiles\WorldTile.cs" />
+     <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
