[WIP] Area Creation

--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -55,7 +55,7 @@
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
-     <Compile Include="Assets\Scripts\Input\TileDetailsComponentControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\TileDetailsComponentControl.cs" />
      <Compile Include="Assets\Scripts\Player\Data\DeityFactory.cs" />
      <Compile Include="Assets\Scripts\Player\HumanPlayer.cs" />
      <Compile Include="Assets\Scripts\Player\SessionPlayer.cs" />
@@ -71,10 +71,10 @@
      <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
      <Compile Include="Assets\Scripts\Player\BasePlayer.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\FeatureManager.cs" />
-     <Compile Include="Assets\Scripts\Input\PlayerWorldInput.cs" />
+     <Compile Include="Assets\Scripts\Input\World\PlayerWorldInput.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityViewPortControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditorControl.cs" />
-     <Compile Include="Assets\Scripts\Input\PowerButtonScript.cs" />
+     <Compile Include="Assets\Scripts\Input\PowerControls\PowerButtonScript.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeClimateControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\ChangedWorldTileEventArg.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
@@ -82,6 +82,11 @@
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldArea.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldRegion.cs" />
+     <Compile Include="Assets\Scripts\Input\World\AreaCreationControl.cs" />
+     <Compile Include="Assets\Scripts\Meta\WorldMapSelectionMode.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\AreaBuilder.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
