--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -51,12 +51,12 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Input\Menu\DeitySelectButtonControl.cs" />
-     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTileEventArg.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
-     <Compile Include="Assets\Scripts\Input\World\TileDetailsComponentControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\TileDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Input\World\AreaCreationControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldRegion.cs" />
      <Compile Include="Assets\Scripts\Player\Data\DeityFactory.cs" />
@@ -81,13 +81,19 @@
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditorControl.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\PowerButtonScript.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeClimateControl.cs" />
-     <Compile Include="Assets\Scripts\Meta\EventArgs\ChangedWorldTileEventArg.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\UpdatedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldArea.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldMap.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionModeControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayTile.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldRegion.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
+     <Compile Include="Assets\Scripts\Input\World\AreaDetailsControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\RegionDetailsControl.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
