--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -50,12 +50,14 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Input\World\RegionDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeitySelectButtonControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
      <Compile Include="Assets\Scripts\Input\World\TileDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Input\World\AreaCreationControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldRegion.cs" />
@@ -75,25 +77,25 @@
      <Compile Include="Assets\Scripts\Model\Geo\Organization\AreaBuilder.cs" />
      <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
      <Compile Include="Assets\Scripts\Player\BasePlayer.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldRegion.cs" />
+     <Compile Include="Assets\Scripts\Input\World\AreaDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\FeatureManager.cs" />
+     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayTile.cs" />
      <Compile Include="Assets\Scripts\Input\World\PlayerWorldInput.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityViewPortControl.cs" />
+     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditorControl.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\PowerButtonScript.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeClimateControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\UpdatedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldArea.cs" />
+     <Compile Include="Assets\Scripts\Input\World\SelectionModeControl.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldMap.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
-     <Compile Include="Assets\Scripts\Input\World\SelectionModeControl.cs" />
-     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayControl.cs" />
-     <Compile Include="Assets\Scripts\Input\World\SelectionDisplayTile.cs" />
-     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldRegion.cs" />
-     <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
-     <Compile Include="Assets\Scripts\Input\World\AreaDetailsControl.cs" />
-     <Compile Include="Assets\Scripts\Input\World\RegionDetailsControl.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\RegionBuilder.cs" />
+     <Compile Include="Assets\Scripts\Input\World\RegionCreationControl.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
