Change climate in areas

--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -53,12 +53,15 @@
      <Compile Include="Assets\Scripts\Input\World\RegionDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeitySelectButtonControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTile.cs" />
+     <Compile Include="Assets\Scripts\Input\Dropdowns\ClimateDropdown.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
+     <Compile Include="Assets\Scripts\Input\Dropdowns\WeatherEffectDropdown.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
      <Compile Include="Assets\Scripts\Input\World\TileDetailsControl.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\RegionBuilder.cs" />
      <Compile Include="Assets\Scripts\Input\World\AreaCreationControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldRegion.cs" />
      <Compile Include="Assets\Scripts\Player\Data\DeityFactory.cs" />
@@ -67,21 +70,26 @@
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditControl.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerData.cs" />
      <Compile Include="Assets\Scripts\Model\Deity\Deity.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\ClimateEventArgs.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Support\Position.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\WeatherEffectEventArgs.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\Biome.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\Climate\WeatherEffect.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\DeityEventArgs.cs" />
      <Compile Include="Assets\Scripts\Meta\SelectionMode.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Climate\Climate.cs" />
      <Compile Include="Assets\Scripts\Meta\Tags.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityDetailControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\AreaBuilder.cs" />
      <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
      <Compile Include="Assets\Scripts\Player\BasePlayer.cs" />
+     <Compile Include="Assets\Scripts\Player\ProfileSettings.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldRegion.cs" />
      <Compile Include="Assets\Scripts\Input\World\AreaDetailsControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\FeatureManager.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionDisplayTile.cs" />
      <Compile Include="Assets\Scripts\Input\World\PlayerWorldInput.cs" />
+     <Compile Include="Assets\Scripts\Input\World\RegionCreationControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityViewPortControl.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionDisplayControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityEditorControl.cs" />
@@ -94,12 +102,7 @@
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldMap.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
-     <Compile Include="Assets\Scripts\Model\Geo\Organization\RegionBuilder.cs" />
-     <Compile Include="Assets\Scripts\Input\World\RegionCreationControl.cs" />
-     <Compile Include="Assets\Scripts\Model\Geo\Features\Climate\Climate.cs" />
-     <Compile Include="Assets\Scripts\Input\Menu\ClimateDropdown.cs" />
-     <Compile Include="Assets\Scripts\Meta\EventArgs\ClimateEventArgs.cs" />
-     <Compile Include="Assets\Scripts\Player\ProfileSettings.cs" />
+     <Compile Include="Assets\Scripts\Meta\EventArgs\ChangeSelectionModeEventArgs.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
