Implement terrain types.
Powers: Raise Hills & Raise Mountains

--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -111,6 +111,7 @@
      <Compile Include="Assets\Scripts\SaveSystem\Model\SaveData.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TileType.cs" />
      <Compile Include="Assets\Scripts\Meta\SpriteTags.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TerrainType.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
