Add scriptable objects

--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -54,10 +54,14 @@
      <Compile Include="Assets\Scripts\Input\Menu\DeitySelectButtonControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Input\Dropdowns\ClimateDropdown.cs" />
+     <Compile Include="Assets\Scripts\Meta\SpriteTags.cs" />
+     <Compile Include="Assets\Scripts\SaveSystem\Model\SaveData.cs" />
+     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldTileData.cs" />
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeTerrainControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Input\Dropdowns\WeatherEffectDropdown.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TerrainFeature.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
      <Compile Include="Assets\Scripts\Input\World\TileDetailsControl.cs" />
@@ -83,13 +87,16 @@
      <Compile Include="Assets\Scripts\Input\Menu\DeityDetailControl.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\AreaBuilder.cs" />
      <Compile Include="Assets\Scripts\Session\SessionManager.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TerrainType.cs" />
      <Compile Include="Assets\Scripts\Player\BasePlayer.cs" />
      <Compile Include="Assets\Scripts\Player\ProfileSettings.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldRegion.cs" />
      <Compile Include="Assets\Scripts\Input\World\AreaDetailsControl.cs" />
+     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldData.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\FeatureManager.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionDisplayTile.cs" />
      <Compile Include="Assets\Scripts\Input\World\PlayerWorldInput.cs" />
+     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldRegionData.cs" />
      <Compile Include="Assets\Scripts\Input\World\RegionCreationControl.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\DeityViewPortControl.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionDisplayControl.cs" />
@@ -99,19 +106,13 @@
      <Compile Include="Assets\Scripts\Input\PowerControls\ShapeClimateControl.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\UpdatedWorldTile.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldArea.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TileType.cs" />
      <Compile Include="Assets\Scripts\Input\World\SelectionModeControl.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerPrefKeys.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldMap.cs" />
      <Compile Include="Assets\Scripts\Input\Menu\PlayerEditorControl.cs" />
-     <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
-     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldTileData.cs" />
      <Compile Include="Assets\Scripts\SaveSystem\Model\WorldAreaData.cs" />
-     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldRegionData.cs" />
-     <Compile Include="Assets\Scripts\SaveSystem\Model\WorldData.cs" />
-     <Compile Include="Assets\Scripts\SaveSystem\Model\SaveData.cs" />
-     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TileType.cs" />
-     <Compile Include="Assets\Scripts\Meta\SpriteTags.cs" />
-     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TerrainType.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Organization\WorldTile.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
