--- a/DawnOfWorlds.csproj
+++ b/DawnOfWorlds.csproj
@@ -61,7 +61,7 @@
      <Compile Include="Assets\Scripts\Input\Menu\MainMenuControl.cs" />
      <Compile Include="Assets\Scripts\Input\Dropdowns\WeatherEffectDropdown.cs" />
      <Compile Include="Assets\Scripts\Meta\Default.cs" />
-     <Compile Include="Assets\Scripts\Model\Powers\ShapeTerrain\TerrainFeatureAction.cs" />
+     <Compile Include="Assets\Scripts\PowerSystems\Actions\TerrainFeatureAction.cs" />
      <Compile Include="Assets\Scripts\Player\IPlayer.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\SelectedWorldArea.cs" />
      <Compile Include="Assets\Scripts\Input\World\TileDetailsControl.cs" />
@@ -116,6 +116,12 @@
      <Compile Include="Assets\Scripts\Input\Dropdowns\TerrainFeatureDropdown.cs" />
      <Compile Include="Assets\Scripts\Meta\EventArgs\TerrainFeatureEventArgs.cs" />
      <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\TerrainFeature.cs" />
+     <Compile Include="Assets\Scripts\PowerSystems\Actions\BiomeCreationAction.cs" />
+     <Compile Include="Assets\Scripts\Model\Geo\Features\Terrain\BiomeCategory.cs" />
+     <Compile Include="Assets\Scripts\PowerSystems\Actions\IActionFilter.cs" />
+     <Compile Include="Assets\Scripts\Input\Dropdowns\ActionSelectionDropdown.cs" />
+     <Compile Include="Assets\Scripts\PowerSystems\Actions\IAction.cs" />
+     <Compile Include="Assets\Scripts\PowerSystems\Actions\BiomeCreationActionFilter.cs" />
      <None Include="Assets\Scripts\DawnOfWorlds.asmdef" />
  <Reference Include="Unity.InputSystem">
  <HintPath>/home/jonas/Documents/projects/unity/DawnOfWorlds/DawnOfWorlds/Library/ScriptAssemblies/Unity.InputSystem.dll</HintPath>
